# gmpc

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.WIN32  TODO  aclocal.m4  autogen.sh  configure  configure.ac  configure.in  gmpc.nsi  gmpc.tasks  gmpc.todo  intltool-extract.in  intltool-merge.in  intltool-update.in  mkinstalldirs
data/: Makefile.am  gmpc-gtk-win32.rc  gmpc.appdata.xml  gmpc.css  gmpc.desktop  gmpc.desktop.in  gmpc.pc.in  weblinks.list
doc/: 0.12.txt  GmpcTodoList0.14.1.txt  GmpcTodoList0.15.2.txt  Keybindings.txt  Makefile.am  Manual.txt  Manual_DE.txt  Manual_NL.txt  Manual_RU.txt  Markup.txt  MpdWishlist.txt  PluginHowto.txt  WhatsNew0.15.5.txt  WhatsNew0.16.0.txt  future.txt  gmpc-remote-stream.1  gmpc-remote.1  gmpc.1  gmpc.doxy  gmpc.tex  libmpd.tex  libmpd.tm  libmpd.txt
doc/11.6/: gmpc-11.6.txt
doc/11.8/: gmpc-11.8.txt
doc/Mallard/: BrowserDatabase.page  BrowserGenreBrowser.page  BrowserMetadataBrowser.page  BrowserNowPlaying.page  BrowserPlayQueue.page  BrowserPlaylistEditor.page  EasyCommand.page  MainInterface.page  Makefile  Makefile.am  Preferences.page  PreferencesConnection.page  PreferencesInterface.page  PreferencesMetadataHandler.page  PreferencesMultimediaKeys.page  PreferencesNotification.page  PreferencesPlugins.page  PreferencesProxy.page  PreferencesServerSettings.page  PreferencesTagBasedBrowser.page  QuickStartGuide.page  generate_html.sh  index.page  style.css
glade/: Makefile.am  Makefile.in  aboutdialog.ui  add-browser.glade  gmpc-aboutdialog.ui  gmpc-add-url.ui  gmpc.glade  gmpc.glade.bak  gmpc.gladep  gmpc.pot  open-location.glade  password-dialog.ui  playlist-browser.glade  playlist-message-window.ui  playlist-save-dialog.ui  playlist.glade  playlist3.glade  playlist3.gladep  playlist3.ui  preferences-autompd.ui  preferences-connection.ui  preferences-esf-dialog.ui  preferences-external-command.ui  preferences-metadata-appearance.ui  preferences-mmkeys.ui  preferences-playlist.ui  preferences-plugins.ui  preferences-proxy.ui  preferences-server.ui  preferences-trayicon.ui  preferences.ui  traymp.gladep  traymp.pot  update_gtkbuilder.sh
pixmaps/: COPYRIGHTS  Makefile.am  Makefile.in  convert.sh
pixmaps/icons/: Makefile.am
remote/: Makefile.am  bacon-message-connection.c  bacon-message-connection.h  gmpc-remote-stream  main.c
src/: Makefile.am  Makefile.arch  Makefile.build  Makefile.in  TreeSearchWidget.c  TreeSearchWidget.h  advanced-search.c  advanced-search.h  advanced_search.c  advanced_search.h  bacon-message-connection.c  bacon-volume.c  bug-information.c  bug-information.h  callback.c  config-defaults.h  config.c  config1.c  config1.h  cover-art-manager.c  cover-art-manager.h  cover-art.c  cover-art.h  debug_printf.c  debug_printf.h  edit_markup.c  eggaccelerators.c  eggcellrendererkeys.c  eggcolumnchooserdialog.h  eggcolumnmodel.c  eggtrayicon.c  gmpc-clicklabel.gob  gmpc-clicklabel.vala  gmpc-connection-private.h  gmpc-connection.c  gmpc-connection.gob  gmpc-connection.h  gmpc-meta-text-view.gob  gmpc-meta-watcher.gob  gmpc-metaimage-private.h  (+106 more)
src/GUI/: cmd.c  cmd.h  control_window.c  control_window.c.orig  control_window.h  status_icon.c  status_icon.h  thv.c  thv.h  title_header.c  title_header.h
src/MetaData/: html2utf8.h  metadata-cache-sqlite.c  metadata-cache-sqlite.h  metadata-cache.c  metadata-cache.h  metadata.c  metadata.h
src/Plugins/: AutoMPD.vala  ExportHTML.vala  ExternalCommand.vala  extraplaylist.c  libnotify.c  sidebar-next-song.vala  sidebar-play-queue-time.vala  sidebar-search.vala
src/Providers/: ChartLyrics.vala  DiscoGS.c  GLyros.c  HTBackdrops.vala  LastFM.c  LyrDB.vala  RenderCover.vala  gmc-plugin.vala  music-tree.vala
src/Tools/: advanced-search.c  advanced-search.h  bug-information.c  bug-information.h  gmpc-auto-reset-priority.vala  gmpc-database-update-tracker.vala  gmpc-liststore-sort.vala  gmpc-meta-watcher.vala  gmpc-metadata-appearance.vala  gmpc-metadata-prefetcher.vala  gmpc_easy_download.c  gmpc_easy_download.h  ipc.c  ipc.h  log.c  log.h  misc.c  misc.h  mm-keys.c  mm-keys.h  mpd-easy-commands.c  mpd-easy-commands.h  mpdinteraction.c  mpdinteraction.h  pixbuf-cache.c  pixbuf-cache.h  plugin-man.c  plugin-man.h  setup-assistant.c  setup-assistant.h  url-fetcher.c
src/Widgets/: GmpcVolume.vala  advanced_settings.vala  gmpc-album-view.vala  gmpc-clicklabel.vala  gmpc-data-view.vala  gmpc-image-async.vala  gmpc-image.vala  gmpc-menu-item-rating.vala  gmpc-metadata-backdrop.vala  gmpc-metadata-similarartists.vala  gmpc-metadata-similarsongs.vala  gmpc-metadata-text-label.vala  gmpc-profiles.vala  gmpc-progress.vala  gmpc-rating.vala  gmpc-sidebar-view.vala  gmpc-song-links.vala  gmpc-song-list.vala  gmpc-stats-label.vala  gmpc-widgets-overlay.vala  gmpc-widgets-popupmenu.vala  gmpc-widgets-qtable.vala  mpd-async-request.c  mpd-async-request.h  pixbuf-cache.c  pixbuf-cache.h  playlist3-messages.c  playlist3-messages.h
src/bacon/: bacon-message-connection.c  bacon-message-connection.h  bacon-volume.c
src/browsers/: gmpc-metadata-browser2.vala  gmpc-nowplaying2.vala  playlist3-artist-browser.c  playlist3-artist-browser.h  playlist3-current-playlist-browser.c  playlist3-current-playlist-browser.h  playlist3-file-browser.c  playlist3-file-browser.h  playlist3-find2-browser.c  playlist3-find2-browser.h  playlist3-find3-browser.c  playlist3-find3-browser.h  playlist3-information.c  playlist3-metadata-browser.c  playlist3-playlist-editor.c  playlist3-playlist-editor.h  playlist3-tag-browser.c  playlist3-tag-browser.h  playlist3-tag2-browser.c  playlist3-tag2-browser.h  server-information.c
src/egg/: eggaccelerators.c  eggcellrendererkeys.c  eggcolumnchooserdialog.c  eggcolumnchooserdialog.h  eggcolumnmodel.c  eggcolumnmodel.h
src/gob/: Makefile.am  gmpc-clicklabel.gob  gmpc-connection.gob  gmpc-idle.gob  gmpc-liststore-sort.gob  gmpc-meta-text-view.gob  gmpc-meta-watcher.gob  gmpc-metaimage.gob  gmpc-mpddata-model-playlist.gob  gmpc-mpddata-model-sort.gob  gmpc-mpddata-model.gob  gmpc-mpddata-treeview.gob  gmpc-profiles.gob  (+2 more)
(+328 files in other folders)
