# Process this file with autoconf to produce a configure script.
AC_INIT(src)
AM_INIT_AUTOMAKE(gmpc, 0.10)

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([stdlib.h string.h unistd.h])


# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

AC_SUBST(GLIB_REQUIRED)
AC_SUBST(GTK_REQUIRED)


PKG_CHECK_MODULES(gmpc,
[
	glib-2.0 
	gobject-2.0
	gtk+-2.0 
	libglade-2.0
])

AC_SUBST(PACKAGE_LIBS)
AC_OUTPUT(Makefile src/Makefile pixmaps/Makefile glade/Makefile)
