appgladedir = $(datadir)/gmpc/
appglade_DATA =	gmpc.glade \
		aboutdialog.ui\
		preferences.ui\
		preferences-playlist.ui\
		preferences-plugins.ui\
		preferences-trayicon.ui\
		preferences-mmkeys.ui\
		preferences-esf-dialog.ui\
		preferences-server.ui\
		preferences-connection.ui\
		password-dialog.ui\
		playlist3.glade

EXTRA_DIST = ${appglade_DATA} 
