appgladedir = $(datadir)/gmpc/
appglade_DATA =\
		aboutdialog.ui\
		preferences.ui\
		preferences-playlist.ui\
		preferences-plugins.ui\
		preferences-trayicon.ui\
		preferences-mmkeys.ui\
		preferences-esf-dialog.ui\
		preferences-server.ui\
		preferences-connection.ui\
		preferences-proxy.ui\
        preferences-metadata-appearance.ui\
        preferences-autompd.ui\
		password-dialog.ui\
		playlist-save-dialog.ui\
		playlist-message-window.ui\
		playlist3.ui\
        gmpc-add-url.ui

EXTRA_DIST = ${appglade_DATA} 
